# cpp_gpu_average_spectrum

./: CMakeLists.txt  README.md  main.cpp
GenYamlFile/: CMakeLists.txt  README.md  config.yaml  mainwindow.cpp  mainwindow.h  notDeleteFile.cpp  output.yaml
processor /: tuning.cpp  tuning.h
